--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,11 +1,11 @@
-<h1><%= @place["author"] %></h1>
+<h1><%= @place["name"] %></h1>
 
-<h2><%= @place["body"] %></h2>
+<h2><%= @place["posts"] %></h2>
 
 <p>
   <a href="https://unsplash.com/photos/ZQf4jzkpz1k">image</a>
 </p>
 
 <p>
-  <a href="">New post</a>
+  <a href="">Back to places</a>
 </p>
