--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,11 +1,5 @@
 <h1><%= @place["name"] %></h1>
 
-<h2><%= @place["posts"] %></h2>
+<h2><%= @post["title"] %></h2>
 
-<p>
-  <a href="https://unsplash.com/photos/ZQf4jzkpz1k">image</a>
-</p>
-
-<p>
-  <a href="">Back to places</a>
-</p>
+<p><a href="/places/<%= @place["id"] %>">Back to <%= @place["name"] %></a></p>
