--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,14 @@
+<h1> <%=place["name"]%> </h1>
+
+
 <div class="row">
   <% for post in @posts %>
     <div class="col-3">
       <h4><%= post["title"] %></h4>
-      <p><%= post["date"] %></p>
+      <p><%= post["posted_on"] %></p>
       <p><%= post["description"] %></p>
     </div>
   <% end %>
 </div>
+
+<p><a href="/posts/new">New post</a></p>
