--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,8 +7,8 @@
     <%= form.text_field "title" %>
     <%= form.label "description" %>
     <%= form.text_field "description" %>
-    <%= form.label "date" %>
-    <%= form.text_field "date" %>
+    <%= form.label "posted_on" %>
+    <%= form.text_field "posted_on" %>
   </p>
   <%= form.submit %>
 <% end %>
