--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,7 +5,7 @@
 <ul>
   <% for place in places %>
     <li>
-      <%= place["name"] %>
+      <a href="/places/<%= place["id"] %>"> <%= place["name"] %> </a>
     </li>
   <% end %>
 </ul>
