working on how to display posts per place

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @place["name"] %></h1>
 
-<h2><%= Posts %></h2>
+<h2>Posts</h2>
 
-<p><a href="/places/<%= @place["id"] %>">Back to <%= @place["name"] %></a></p>
+<p><a href="/places/">Back to places</a></p>
