--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,5 +1,13 @@
 <h1><%= @place["name"] %></h1>
 
-<h2>Posts</h2>
+<ul>
+  <% for post in @posts %>
+    <li>
+      <a href="/posts/<%= post["id"] %>"> <%= post["title"] %> </a>
+    </li>
+  <% end %>
+</ul>
+
+<p><a href="/posts/new">New Post</a></p>
 
 <p><a href="/places/">Back to places</a></p>
