--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,7 @@
     <%= form.text_field "description" %>
     <%= form.label "posted_on" %>
     <%= form.text_field "posted_on" %>
+    <%= form.hidden_field "place_id" %>
   </p>
   <%= form.submit %>
 <% end %>
