--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,11 +3,12 @@
 <ul>
   <% for post in @posts %>
     <li>
-      <a href="/posts/<%= post["id"] %>"> <%= post["title"] %> </a>
+      <a href="/posts?id=<%= posts.place_id %>"> <%= posts["title"] %> </a>
     </li>
   <% end %>
 </ul>
 
-<p><a href="/posts/new">New Post</a></p>
+<p><a href="/posts/new?id=<%= @place.id %>">New post for <%= @place.name %>
+</a></p>
 
 <p><a href="/places/">Back to places</a></p>
