attempted the link with proper code

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,7 +8,11 @@
   <% end %>
 </ul>
 
+
 <p><a href="/posts/new?id=<%= @place.id %>">New post for <%= @place.name %>
 </a></p>
+
+<p> Not able to get the posts to show per place </p>
+
 
 <p><a href="/places/">Back to places</a></p>
