--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,7 +9,7 @@
     <%= form.text_field "description" %>
     <%= form.label "posted_on" %>
     <%= form.date_field "posted_on" %>
-  
-  </p>  <%= form.hidden_field "place_id" %>
+    <%= form.hidden_field "place_id" %>
+  </p>  
   <%= form.submit %>
 <% end %>
